--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
-.row {
-    margin: 0px;
-    padding: 0px;
-    display: flex;
-    justify-content: space-between;
+.item {
+    box-sizing: border-box;
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: 1000px;
+    height: 25px;
 }
 
-div {
-    box-sizing: border-box;
-    padding: 10px;
-    width: 10px;
+.row {
+    display: flex;
 }
+
 
 .fill {
     background-color: black;
