--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
-.item {
+#grid-container {
+    width: 500px;
+    height: 500px;
     box-sizing: border-box;
-    flex-grow: 0;
-    flex-shrink: 1;
-    flex-basis: 1000px;
-    height: 25px;
+    display: flex;
+    flex-direction: column;
 }
 
 .row {
     display: flex;
+    justify-content: center;
+    flex: 1;
 }
 
+.item {
+    flex: 1;
+}
 
 .fill {
     background-color: black;
+}
+
+button {
+    padding: 5px 7px;
+    margin: 20px 5px;
 }
